--- a/src/resources/views/details_order.hbs
+++ b/src/resources/views/details_order.hbs
@@ -77,7 +77,7 @@
     <div class="container btncheckout">
         <div></div>
         <div class="checkout">
-            <a href="/shipper/getall/test">Back</a>
+            <a href="/">Back</a>
         </div>
         <!-- <div class="back">
                 <a href="#">Continue Shopping</a>
