--- a/src/resources/views/register_succes.hbs
+++ b/src/resources/views/register_succes.hbs
@@ -8,7 +8,7 @@
       </div>
     </div>
 
-    <div class="container" style="justify-content: center;">
+    <div class="container">
       <div class="white-div d-flex align-items-center justify-content-center">
         <div class="row">
           
