--- a/src/resources/views/register_customer.hbs
+++ b/src/resources/views/register_customer.hbs
@@ -5,7 +5,7 @@
     </div>
   </div>
 
-  <div class="container">
+  <div class="container"  style="justify-content: center;">
     <div class="white-div d-flex align-items-center justify-content-center">
       <div class="row">
         <p>{{message}}</p>
