--- a/src/resources/views/homeCustomer.hbs
+++ b/src/resources/views/homeCustomer.hbs
@@ -53,7 +53,6 @@
   </div>
 
   <!-- collection -->
-  <!-- collection -->
   <div class="container collections">
     <div class="row justify-content-center">
       <div class="col-lg-12">
@@ -70,7 +69,7 @@
               <div class="row g-3 justify-content-center gx-5">
                 <div class="col-md-4">
                   <div class="card">
-                    <a href="#"><img src="/image/collection1.jpg" class="card-img-top" alt="..."></a>
+                    <a href="#"><img src="image/collection1.jpg" class="card-img-top" alt="..."></a>
                     <div class="card-body">
                       <a href="#">
                         Health & Personal Care
@@ -81,7 +80,7 @@
                 </div>
                 <div class="col-md-4">
                   <div class="card">
-                    <a href="#"><img src="/image/collection2.jpg" class="card-img-top" alt="..."></a>
+                    <a href="#"><img src="image/collection2.jpg" class="card-img-top" alt="..."></a>
                     <div class="card-body">
                       <a href="#">
                         Beauty picks
@@ -92,7 +91,7 @@
                 </div>
                 <div class="col-md-4">
                   <div class="card">
-                    <a href="#"><img src="/image/collection3.jpg" class="card-img-top" alt="..."></a>
+                    <a href="#"><img src="image/collection3.jpg" class="card-img-top" alt="..."></a>
                     <div class="card-body">
                       <a href="#">
                         Electronics
@@ -107,7 +106,7 @@
               <div class="row g-3 justify-content-center gx-5">
                 <div class="col-md-4">
                   <div class="card">
-                    <a href="#"><img src="/image/collection4.jpg" class="card-img-top" alt="..."></a>
+                    <a href="#"><img src="image/collection4.jpeg" class="card-img-top" alt="..."></a>
                     <div class="card-body">
                       <a href="#">
                         Home Decor
@@ -118,7 +117,7 @@
                 </div>
                 <div class="col-md-4">
                   <div class="card">
-                    <a href="#"><img src="/image/collection5.jpg" class="card-img-top" alt="..."></a>
+                    <a href="#"><img src="image/collection5.jpeg" class="card-img-top" alt="..."></a>
                     <div class="card-body">
                       <a href="#">
                         Sports & Fitness
@@ -129,7 +128,7 @@
                 </div>
                 <div class="col-md-4">
                   <div class="card">
-                    <a href="#"><img src="/image/collection6.jpg" class="card-img-top" alt="..."></a>
+                    <a href="#"><img src="image/collection6.jpeg" class="card-img-top" alt="..."></a>
                     <div class="card-body">
                       <a href="#">
                         Clothing
