--- a/src/resources/views/homeCustomer.hbs
+++ b/src/resources/views/homeCustomer.hbs
@@ -470,7 +470,7 @@
 
   <!-- Simple Mall -->
   <div class="mall container">
-    <div class="titlemall">
+    <div class="titlemall col-12">
       <h2 class=" mb-2">Simple Mall</h2>
       <a href="#">View all <i class="fa fa-caret-right"></i></a>
     </div>
