--- a/src/resources/views/helper.hbs
+++ b/src/resources/views/helper.hbs
@@ -1,21 +1,89 @@
-<main class="help_page_main">
-    <form action="" method="post" class="help_page_form">
-        <h1>HELPS</h1>
-        <label for="help_name">
-            <input type="text" id="help_name" placeholder="Your name" name="help_name">
-        </label>
-        <label for="help_phone">
-            <input type="tel" id="help_phone" placeholder="Phone number" name="help_phone">
-        </label>
-        <label for="help_email">
-            <input type="email" id="help_email" placeholder="Email" name="help_email">
-        </label>
-        <label for="help_description" class="help_description">
-            <textarea id="help_description" name="help_description" rows="15"
-                cols="60">Help Detailed Description</textarea>
-        </label>
-        <button type="submit">
-            SUBMIT
-        </button>
+<style>
+  .blue-div { background-color: #034266; color: white; border-radius: 50px;
+  padding: 20px; text-align: center; } .text-div { padding: 5%; } .gray-div {
+  margin-top: 2%; background-color: #D9D9D9; border-radius: 10px; padding: 20px;
+  text-align: center; } .avatar { width: 150px; height: 150px; border-radius:
+  50%; object-fit: cover; margin-bottom: 20px; } .name { font-size: 24px;
+  font-weight: bold; margin-bottom: 10px; } .introduction { font-size: 18px; }
+
+</style>
+<main>
+  <div style="background-color: #8D8C8C;">
+    <input type="checkbox" id="check1" name="check1" />
+    <nav class="container nav1">
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Product</a></li>
+        <li><a href="#">Service</a></li>
+        <li style="background-color: #DE4F11;"><a href="#">Contact Us</a></li>
+      </ul>
+    </nav>
+    <label for="check1" class="checkbtn1">
+      <i class="fa fa-bars"></i>
+      <span class="category-text">CATEGORIES</span>
+    </label>
+  </div>
+
+  <!-- collection -->
+
+  <!-- Trending Categories -->
+
+  <!-- Flash Sale -->
+
+  <!-- Simple Mall -->
+
+  <!-- Daily Discover -->
+  <div class="dailyDiscover container d-flex justify-content-center">
+    <div class="blue-div col-12" style="width: 50%;">
+      <h1>HELPS</h1>
+    </div>
+    <form class="col-12">
+      <div class="form-group col-12 mt-5 d-flex justify-content-center">
+        <input
+          style="width:70%"
+          type="text"
+          class="form-control border-0 border-bottom"
+          name="yourName"
+          placeholder="Your name"
+        />
+      </div>
+      <div class="form-group col-12 mt-3 d-flex justify-content-center">
+        <input
+          style="width:70%"
+          type="text"
+          class="form-control border-0 border-bottom"
+          name="phoneNumber"
+          placeholder="Phone number"
+        />
+      </div>
+      <div class="form-group col-12 mt-3 d-flex justify-content-center">
+        <input
+          style="width:70%"
+          type="text"
+          class="form-control border-0 border-bottom"
+          name="email"
+          placeholder="Email"
+        />
+      </div>
+      <div class="form-group col-12 mt-3 d-flex justify-content-center">
+        <textarea
+          style="width:70%"
+          rows="10"
+          type="text"
+          class="form-control border-0 border-bottom"
+          name="contact"
+          placeholder="Customer contact input"
+          value=""
+        ></textarea>
+      </div>
+      <div class="d-flex justify-content-center align-items-center mt-5">
+        <button
+          style="width:30%; background-color:#CC0000; color: white;"
+          type="submit"
+          class="btn rounded-pill"
+        >Submit</button>
+      </div>
     </form>
+
+  </div>
 </main>
