--- a/src/resources/views/vendor_info.hbs
+++ b/src/resources/views/vendor_info.hbs
@@ -61,7 +61,9 @@
               </div>
 
             </form>
-
+          <a class="d-flex justify-content-center align-items-center mt-2" href="/changePassword" style="text-decoration: none;">
+            <button style="width:70%; background-color:#DE4F11; color: white;" type="submit" class="btn rounded-pill">Change password</button>
+            </a>
             <form action="vendor/logout" method="POST">
             <div class="d-flex justify-content-center align-items-center mt-2">
 
