--- a/src/resources/views/changePasswordShipper.hbs
+++ b/src/resources/views/changePasswordShipper.hbs
@@ -1,69 +1,82 @@
- <main>
-    <div class="container-fluid" style="padding: 0;">
-      <div class="d-flex justify-content-center align-items-center" style="height: 15vh; background-color: #034266;">
-        <div class="text-white text-center display-1">My page</div>
-      </div>
+<main>
+  <div class="container-fluid" style="padding: 0;">
+    <div class="d-flex justify-content-center align-items-center" style="height: 15vh; background-color: #034266;">
+      <div class="text-white text-center display-1">My page</div>
     </div>
+  </div>
 
-    <div class="container" style="display: block;">
-      <div class="white-div d-flex align-items-center justify-content-center">
-        <div class="row">
+  <div class="container" style="display: block;">
+    <div class="white-div d-flex align-items-center justify-content-center">
+      <div class="row">
+
+        {{#if status}}
+        {{#if message}}
+        <div class="alert alert-primary" role="alert">
           <p>{{message}}</p>
-          <div class="col">
-            <h3 class="text-center">Change password</h3>
-            <form action="/shipper/updatePassword" method="POST">
-              <div class="form-group m-2">
-                <input type="password" class="form-control" id="input-user" name="passwordOld" placeholder="Old password" required>
-              </div>
-              <div class="form-group m-2">
-                <input type="password" class="form-control" id="input-user" name="password" placeholder="New password" required>
-              </div>
-              <div class="form-group m-2">
-                <input type="password" class="form-control" id="input-user" name="reNewPassword" placeholder="Re enter password" required>
-              </div>
-              {{!-- <small style="color: red;">There is error, please try again</small> --}}
+        </div>
 
-              <div class="d-flex justify-content-center align-items-center">
-                <button style="width:70%; background-color:#DE4F11; color: white;" type="submit" class="btn rounded-pill">Change password</button>
-              </div>
 
-            </form>
-          </div>
+        {{/if}}
+        {{/if}}
+        <div class="col">
+          <h3 class="text-center">Change password</h3>
+          <form action="/shipper/updatePassword" method="POST">
+            <div class="form-group m-2">
+              <input type="password" class="form-control" id="input-user" name="passwordOld" placeholder="Old password"
+                required>
+            </div>
+            <div class="form-group m-2">
+              <input type="password" class="form-control" id="input-user" name="password" placeholder="New password"
+                required>
+            </div>
+            <div class="form-group m-2">
+              <input type="password" class="form-control" id="input-user" name="reNewPassword"
+                placeholder="Re enter password" required>
+            </div>
+            {{!-- <small style="color: red;">There is error, please try again</small> --}}
+
+            <div class="d-flex justify-content-center align-items-center">
+              <button style="width:70%; background-color:#DE4F11; color: white;" type="submit"
+                class="btn rounded-pill">Change password</button>
+            </div>
+
+          </form>
         </div>
       </div>
     </div>
-    <script>
-      const imageInput = document.getElementById("input-image");
-      const imagePreview = document.getElementById("preview-image");
-    
-      imageInput.addEventListener("change", function(event) {
-        const file = event.target.files[0];
-    
-        if (file) {
-          const reader = new FileReader();
-    
-          reader.onload = function(e) {
-            imagePreview.src = e.target.result;
-          };
-    
-          reader.readAsDataURL(file);
-        } else {
-          imagePreview.src = "#";
-        }
-      });
-      
-</script>
-    </script>
-    <style>
-      .white-div {
-        background-color: white;
-        padding: 20px;
-        border-radius: 5px;
-        margin-top: 20px;
-        margin-bottom: 20px;
+  </div>
+  <script>
+    const imageInput = document.getElementById("input-image");
+    const imagePreview = document.getElementById("preview-image");
+
+    imageInput.addEventListener("change", function (event) {
+      const file = event.target.files[0];
+
+      if (file) {
+        const reader = new FileReader();
+
+        reader.onload = function (e) {
+          imagePreview.src = e.target.result;
+        };
+
+        reader.readAsDataURL(file);
+      } else {
+        imagePreview.src = "#";
       }
-    </style>
+    });
+
+  </script>
+  </script>
+  <style>
+    .white-div {
+      background-color: white;
+      padding: 20px;
+      border-radius: 5px;
+      margin-top: 20px;
+      margin-bottom: 20px;
+    }
+  </style>
 
 
 
-  </main>
+</main>
