--- a/src/resources/views/changePasswordShipper.hbs
+++ b/src/resources/views/changePasswordShipper.hbs
@@ -20,7 +20,7 @@
         {{/if}}
         <div class="col">
           <h3 class="text-center">Change password</h3>
-          <form action="/shipper/updatePassword" method="POST">
+          <form action="/shipper/api/updatePassword" method="POST">
             <div class="form-group m-2">
               <input type="password" class="form-control" id="input-user" name="passwordOld" placeholder="Old password"
                 required>
